--- a/index.html
+++ b/index.html
@@ -132,21 +132,21 @@
                 <div class="social-media">
                     <ul>
                         <li>SOCIALS</li><br>
-                        <li>Facebook</li><br>
-                        <li>Instagram</li><br>
-                        <li>Twitter</li><br>
-                        <li>Linkedin</li><br>
-                        <li>G-mail</li><br><br>
+                        <li><a href="https://www.facebook.com/AfricaCollectTextiles/?_rdc=2&_rdr#">Facebook</a></li><br>
+                        <li><a href="https://www.instagram.com/africa.collect.textiles/">Instagram</a></li><br>
+                        <li><a href="https://x.com/AfricaCollect">Twitter</a></li><br>
+                        <li><a href="https://www.linkedin.com/company/africa-collect-textiles/">Linkedin</a></li><br>
+                        <li><a href="mailto: info@irecycleapp.com">G-mail</a></li><br><br>
                     </ul>
                 </div>
 
                 <div class="about-us">
                     <ul>
                         <li>LINKS</li><br>
-                        <li>Home</li><br>
-                        <li>How it works</li><br>
-                        <li>About us</li><br>
-                        <li>Contact us</li><br>
+                        <li><a href="#">Home</a></li><br>
+                        <li><a href="#explore">How it works</a></li><br>
+                        <li><a href="#aboutUs">About us</a></li><br>
+                        <li><a href="#contactUs">Contact us</a></li><br>
                     </ul>
                 </div>
                 <div class="footer-icons">
@@ -176,7 +176,7 @@
                                     class="fa-brands fa-instagram"></i></a>
                             <a href="https://www.linkedin.com/company/africa-collect-textiles/"><i
                                     class="fa-brands fa-linkedin"></i></a>
-                            <a href=""><i class="fa-solid fa-envelope"></i></a>
+                            <a href="mailto: info@irecycleapp.com"><i class="fa-solid fa-envelope"></i></a>
                             <a href="https://x.com/AfricaCollect"><i class="fa-brands fa-twitter"></i></a>
                         </div>
                     </ul>
