corrected spelling mistakes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div class="logo">IRECYCLE</div>
+        <div class="logo">iRECYCLE</div>
         <nav>
             <a href="#">HOME</a>
             <a href="#explore">HOW IT WORKS</a>
