added javascript functionality

--- a/index.html
+++ b/index.html
@@ -13,22 +13,23 @@
     <header>
         <div class="logo">iRECYCLE</div>
         <nav>
-            <a href="#">HOME</a>
-            <a href="#explore">HOW IT WORKS</a>
-            <a href="#aboutUs">ABOUT US</a>
-            <a href="#contactUs">CONTACT US</a>
-        </nav>
+            <a id="home" href="#">HOME</a>
+            <a id="explore" href="#explore">HOW IT WORKS</a>
+            <a id="aboutUs" href="#aboutUs">ABOUT US</a>
+            <a id="contactUs" href="#contactUs">CONTACT US</a>
+        
 
 
 
     </header>
     <img src="images/logo.png" id="logoo">
+    
     <section class="hero">
         <div class="hero-text">
             <h1>GO GREEN NOW</h1>
             <p>Your recycling solution: Efficient and responsible solutions<br>
                 for waste management</p>
-            <button type="button" id="learn-button">Learn More</button>
+           <button type="button" id="learn-button">Learn More</button>
         </div>
 
     </section>
@@ -50,10 +51,10 @@
                 environment<br>
         </div>
     </section>
-    <h2>ABOUT US</h2>
+    <h2 id="moreAboutUs">ABOUT US</h2>
     <section class="header">
 
-        <div class="experience" id="aboutUs">
+        <div class="experience" >
 
             <p>iReycle is dedicated to transforming textile waste into valuable resources contributing
                 to a circular economy and reducing landfill burden.<br> We offer comprehensive textile recycling
@@ -67,7 +68,7 @@
                 to a
                 greener planet.
             </p>
-            <a href="#" id="learn-more-btn">Learn More </a>
+        <button id="learn-more-btn">Learn More</button> 
         </div>
 
         <div class="aboutus-img">
@@ -96,9 +97,9 @@
         </div>
     </section>
 
-    <h2>EXPLORE</h2>
+    <h2 id="exploreMore">EXPLORE</h2>
 
-    <section class="explore" id="explore">
+    <section class="explore" >
         <div class="screens">
             <img src="images/home.png" id="screen">
             <img src="images/welcome.png" id="screen">
@@ -115,7 +116,7 @@
 
     <footer>
 
-        <section class="footer-details" id="contactUs">
+        <section class="footer-details" >
             <div class="footerlog">
                 <div class="footer-logo-details">
                     <p>iRECYCLE</p>
@@ -151,7 +152,7 @@
                 </div>
                 <div class="footer-icons">
                     <ul>
-                        <div class="message-phonecall">
+                        <div class="message-phonecall" id="contactUsNow">
                             <div class="phonecall">
                                 <i class="fa-solid fa-phone-volume"></i><br>
                                 <p>6238641240</p><br>
@@ -189,6 +190,7 @@
 
         </section>
     </footer>
+    <script src="index.js"></script>
 
 </body>
 
