worked on the logos

--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
             <a id="contactUs" href="#contactUs">CONTACT US</a>
         
 
-
-
     </header>
     <img src="images/logo.png" id="logoo">
     
@@ -47,8 +45,7 @@
         <div class="service-card">
             <img src="images/mission-removebg-preview.png" alt="Comapny's mission">
             <h3>Mission</h3>
-            <p>Help traders manage their unsold clothes<br> in an ecofriendly way to create and foster an
-                environment<br>
+            <p>Help traders manage their unsold clothes<br> in an ecofriendly way to create and foster an environment<br>
         </div>
     </section>
     <h2 id="moreAboutUs">ABOUT US</h2>
@@ -190,6 +187,7 @@
 
         </section>
     </footer>
+
     <script src="index.js"></script>
 
 </body>
